--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
     margin-bottom: 32px;
     min-width: 200px;
     text-align: center;
+    cursor: pointer;
 }
 
 .menu a:hover {
@@ -88,6 +89,7 @@ body {
     justify-content: center;
     text-align: center;
 }
+
 .remove-highscore a {
     font-size: 24px;
     text-decoration: none;
@@ -103,7 +105,6 @@ body {
     background-color: rgba(255, 255, 255, 0.1);
     transition: all 225ms ease-in-out;
 }
-
 
 .left_div {
     position: absolute;
@@ -121,11 +122,10 @@ body {
     top: 0;
     transition: all 225ms ease;
     opacity: 0;
-    
 }
 
 .d-none {
-    display: none;
+    display: none !important;
 }
 
 .menu-blend {
@@ -141,4 +141,49 @@ body {
     position: absolute;
     bottom: 8px;
     right: 24px;
+}
+
+.gameover-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    margin-bottom: 32px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.player-name {
+    background-color: rgba(255, 255, 255, 0.1);
+    border-right: 0;
+    border-bottom: 0;
+    color: white;
+    font-size: 24px;
+    padding: 12px;
+}
+
+.gameover-menu h2 {
+    font-size: 48px;
+}
+
+.gameover-menu a {
+    text-decoration: none;
+    transition: all 225ms ease-in-out;
+    color: white;
+    border: 4px solid rgba(255, 255, 255, 0.2);
+    padding: 8px;
+    margin-bottom: 32px;
+    min-width: 200px;
+    text-align: center;
+}
+
+.gameover-menu a:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+    transition: all 225ms ease-in-out;
+}
+
+.gameover-menu input {
+    padding: 32px;
+    margin-bottom: 32px;
 }
